welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:23: error: expected start of definition
	override def run() { 
                 ^Methods:31: error: Unmatched closing brace '}' ignored here
}
^